fixed the bug of nofitification list overflow

--- a/src/components/notification-center/NotificationCenter/styles.module.css
+++ b/src/components/notification-center/NotificationCenter/styles.module.css
@@ -15,7 +15,7 @@
 
 @media only screen and (max-width: 470px) {
   .popoverContainer {
-    width: 326px;
+    width: 320px;
     border: 1px solid var(--color-border-light);
   }
 }
